comment and analytic

--- a/hugo-blox/blox-tailwind/layouts/partials/views/my-blog-view.start.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/views/my-blog-view.start.html
@@ -1,2 +1,1 @@
-<div class="mt-16 sm:mt-20 w-fit">
-  <div class="flex max-w-3xl flex-col space-y-16">
+<div class="container max-w-[65ch] mx-auto bg-white dark:bg-zinc-900 rounded-xl border-gray-100 dark:border-gray-700 border shadow-md overflow-hidden my-5" style="max-width: 1000px"><!--max-w-md md:max-w-2xl-->
