--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -124,97 +124,111 @@
 </div>
 {{ end }}
 
-<div class="grid grid-cols-2">
+<div class="flex flex-col items-center">
+  <div class="container px-8 mx-auto max-w-screen-lg xl:px-5 py-5 lg:py-8">
+    <div class="grid md:grid-cols-2 top-blog-container">
 
-  <div class="p-4">
-    <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-      Open Source Projects
-    </div>
-    {{ range $index, $item := $query_repo }}
-        <div class="p-4 border">
-            <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2 dark:text-white"><a
-                href="{{ $item.RelPermalink }}"><span
-                class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
-                   {{- $item.Title -}}
-                  </span></a>
-              </h2>
-            <p class="mt-2 line-clamp-3 text-sm text-gray-500 dark:text-gray-400"><a
-                href="{{ $item.RelPermalink }}">
-                {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
-              </a></p>
-
-            <!-- get start button -->
-            <a href="{{ $item.Params.external_link }}" class="">
-                Get start 
-            </a>
-            |
-            <a href="{{ $item.Params.doc_link }}" class="">
-              Read the docs
-          </a>
+      <div class="p-4">
+        <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
+          Open Source Projects
         </div>
-    {{ end }}
-  </div>
-  <div class="p-4">
-    <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-      Recent blogs
-    </div>
-    {{ range $index, $item := $query_blogs }}
-        <div class="p-4 border">
-            <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2 dark:text-white"><a
-                href="{{ $item.RelPermalink }}"><span
-                class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
-                   {{- $item.Title -}}
-                  </span></a>
-              </h2>
-            <p class="mt-2 line-clamp-3 text-sm text-gray-500 dark:text-gray-400"><a
-                href="{{ $item.RelPermalink }}">
-                {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
-              </a></p>     
-        </div>
-    {{ end }}
+        {{ range $index, $item := $query_repo }}
+            <div class="p-4 border top-item hover:bg-black dark:hover:bg-white dark:hover:text-black hover:text-white dark:border-white dark:text-white dark:hover:bg-white">
+                <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2"><a
+                    href="{{ $item.RelPermalink }}"><span
+                    class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
+                       {{- $item.Title -}}
+                      </span></a>
+                  </h2>
+                <p class="mt-2 line-clamp-3 text-sm"><a
+                    href="{{ $item.RelPermalink }}">
+                    {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
+                  </a></p>
 
-    
-{{/* show all the blogs*/}}
-{{ $show_archive_link := $block.content.archive.enable | default true }}
-{{ if $show_archive_link | and $archive_page }}
-
-  {{ $archive_link := "" }}
-  {{ if $block.content.archive.link }}
-    {{ $archive_link = $block.content.archive.link | relLangURL }}
-  {{ else }}
-    {{ $archive_link = $archive_page.RelPermalink }}
-  {{ end }}
-
-  {{/* Localisation */}}
-  {{ $items_type := $archive_page.Type }}
-  {{ $i18n := "" }}
-  <!-- {{ if eq $items_type "blog" }}
-    {{ $i18n = "more_posts" }}
-  {{ else if eq $items_type "event" }}
-    {{ $i18n = "more_talks" }}
-  {{ else if eq $items_type "publication" }}
-    {{ $i18n = "more_publications" }}
-  {{ else }}
-    {{ $i18n = "more_pages" }}
-  {{ end }} -->
-
-  {{ $i18n = "more_posts" }}
-
-
-  {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "See all" }}
-
-  <div class="container mx-auto max-w-screen-lg px-8 xl:px-5 pb-5 lg:pb-8">
-    <div class="mt-10 flex justify-center">
-      <a
-        class="relative inline-flex items-center gap-1 rounded-md border border-gray-300 bg-white px-3 py-2 pl-4 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20 dark:border-gray-500 dark:bg-gray-800 dark:text-gray-300"
-        href="{{ $archive_link }}">
-          <span>{{ $archive_text | emojify }}</span>
-        </a>
+                <!-- get start button -->
+                <a href="{{ $item.Params.external_link }}" class="">
+                    Get start
+                </a>
+                |
+                <a href="{{ $item.Params.doc_link }}" class="">
+                  Read the docs
+              </a>
+            </div>
+        {{ end }}
       </div>
-  </div>
+      <div class="p-4">
+        <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
+          Recent blogs
+        </div>
+        {{ range $index, $item := $query_blogs }}
+            <div class="p-4 border top-item hover:bg-black dark:hover:bg-white dark:hover:text-black hover:text-white dark:border-white dark:text-white dark:hover:bg-white">
+                <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2"><a
+                    href="{{ $item.RelPermalink }}"><span
+                    class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
+                       {{- $item.Title -}}
+                      </span></a>
+                  </h2>
+                <p class="mt-2 line-clamp-3 text-sm"><a
+                    href="{{ $item.RelPermalink }}">
+                    {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
+                  </a></p>
+            </div>
+        {{ end }}
 
+
+    {{/* show all the blogs*/}}
+    {{ $show_archive_link := $block.content.archive.enable | default true }}
+    {{ if $show_archive_link | and $archive_page }}
+
+      {{ $archive_link := "" }}
+      {{ if $block.content.archive.link }}
+        {{ $archive_link = $block.content.archive.link | relLangURL }}
+      {{ else }}
+        {{ $archive_link = $archive_page.RelPermalink }}
+      {{ end }}
+
+      {{/* Localisation */}}
+      {{ $items_type := $archive_page.Type }}
+      {{ $i18n := "" }}
+      <!-- {{ if eq $items_type "blog" }}
+        {{ $i18n = "more_posts" }}
+      {{ else if eq $items_type "event" }}
+        {{ $i18n = "more_talks" }}
+      {{ else if eq $items_type "publication" }}
+        {{ $i18n = "more_publications" }}
+      {{ else }}
+        {{ $i18n = "more_pages" }}
+      {{ end }} -->
+
+      {{ $i18n = "more_posts" }}
+
+
+      {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "See all" }}
+
+      <div class="container mx-auto max-w-screen-lg px-8 xl:px-5 pb-5 lg:pb-8">
+        <div class="mt-10 flex justify-center">
+          <a
+            class="relative inline-flex items-center gap-1 rounded-md border border-gray-300 bg-white px-3 py-2 pl-4 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20 dark:border-gray-500 dark:bg-gray-800 dark:text-gray-300"
+            href="{{ $archive_link }}">
+              <span>{{ $archive_text | emojify }}</span>
+            </a>
+          </div>
+      </div>
+
+      </div>
+    </div>
   </div>
 </div>
 
-
 {{ end }}
+
+<style>
+  .top-blog-container .top-item {
+    margin-bottom: 1rem;
+    border-radius:  0.5rem;
+  }
+  .top-blog-container .top-item:last-child {
+    margin-bottom: 0;
+  }
+
+</style>
