make top block width larger

--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -125,7 +125,7 @@
 {{ end }}
 
 <div class="flex flex-col items-center">
-  <div class="container px-8 mx-auto max-w-screen-lg xl:px-5 py-5 lg:py-8">
+  <div class="container px-8 mx-auto max-w-screen-xl xl:px-5 py-5 lg:py-8">
     <div class="grid md:grid-cols-2 top-blog-container">
 
       <div class="p-4">
