disable author card

--- a/hugo-blox/blox-tailwind/layouts/partials/page_author_card.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/page_author_card.html
@@ -1,4 +1,4 @@
-{{ $page := .page }}
+<!-- {{ $page := .page }}
 {{ $author_page := .author_page }}
 {{ $site_type := site.Params.marketing.seo.site_type | default "Person" }}
 {{- $has_profile := not (eq nil $author_page.Params.superuser) -}}
@@ -54,4 +54,4 @@
   </div>
 </div>
 
-{{end}}{{/* End Check for Author Profile */}}
+{{end}}{{/* End Check for Author Profile */}} -->
