update homepage style

--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -129,35 +129,38 @@
     <div class="grid md:grid-cols-2 top-blog-container">
 
       <div class="p-4">
-        <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
+        <div class="mb-6 text-2xl font-bold text-gray-900 dark:text-white">
           Open Source Projects
         </div>
         {{ range $index, $item := $query_repo }}
-            <div class="p-4 border top-item hover:bg-black dark:hover:bg-white dark:hover:text-black hover:text-white dark:border-white dark:text-white dark:hover:bg-white">
+            <div class="p-4 border top-item bg-black text-white hover:bg-white hover:text-black dark:bg-white dark:text-black dark:hover:bg-black dark:hover:text-white">
                 <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2"><a
                     href="{{ $item.RelPermalink }}"><span
                     class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
                        {{- $item.Title -}}
                       </span></a>
                   </h2>
-                <p class="mt-2 line-clamp-3 text-sm"><a
+                <p class="mt-2 line-clamp-5 text-sm"><a
                     href="{{ $item.RelPermalink }}">
                     {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
                   </a></p>
 
-                <!-- get start button -->
-                <a href="{{ $item.Params.external_link }}" class="">
+                <div class="mt-2 jump-btn-group">
+                  <!-- get start button -->
+                  <a href="{{ $item.Params.external_link }}" target="_blank" class="jump-button">
                     Get start
-                </a>
-                |
-                <a href="{{ $item.Params.doc_link }}" class="">
-                  Read the docs
-              </a>
+                  </a>
+                  |
+                  <a href="{{ $item.Params.doc_link }}" target="_blank" class="jump-button">
+                    Read the docs
+                  </a>
+                </div>
+
             </div>
         {{ end }}
       </div>
       <div class="p-4">
-        <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
+        <div class="mb-6 text-2xl font-bold text-gray-900 dark:text-white">
           Recent blogs
         </div>
         {{ range $index, $item := $query_blogs }}
@@ -167,11 +170,14 @@
                     class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">
                        {{- $item.Title -}}
                       </span></a>
-                  </h2>
-                <p class="mt-2 line-clamp-3 text-sm"><a
-                    href="{{ $item.RelPermalink }}">
-                    {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
-                  </a></p>
+                </h2>
+              <p class="mt-2 line-clamp-3 text-sm">by: Shaoyuan Chen, Mingxing Zhang, May 20, 2024</p>
+              <hr class="mt-2" />
+              <p class="mt-2 line-clamp-5 text-sm">
+                <a href="{{ $item.RelPermalink }}">
+                {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
+                </a>
+              </p>
             </div>
         {{ end }}
 
@@ -229,6 +235,51 @@
   }
   .top-blog-container .top-item:last-child {
     margin-bottom: 0;
+  }
+
+  .line-clamp-5 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5
+  }
+
+  :is(.dark .dark\:text-black) {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0/var(--tw-text-opacity))
+  }
+  :is(.dark .dark\:bg-white) {
+    background-color: #ffffff
+  }
+
+  .hover\:bg-white:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255/var(--tw-bg-opacity))
+  }
+  .hover\:text-black:hover {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0/var(--tw-text-opacity))
+  }
+  :is(.dark .dark\:hover\:bg-black:hover) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0/var(--tw-bg-opacity))
+  }
+  :is(.dark .dark\:hover\:text-white:hover) {
+    --tw-bg-opacity: 1;
+    color: rgb(255 255 255/var(--tw-text-opacity))
+  }
+
+  .jump-btn-group {
+    text-align: right;
+  }
+  .jump-btn-group .jump-button:hover {
+    --tw-text-opacity: 1;
+    color: rgb(var(--color-primary-700)/var(--tw-text-opacity))
+  }
+
+  :is(.dark .jump-button:hover) {
+    --tw-text-opacity: 1;
+    color: rgb(var(--color-primary-300)/var(--tw-text-opacity))
   }
 
 </style>
