--- a/hugo-blox/blox-tailwind/layouts/partials/views/my-blog-view.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/views/my-blog-view.html
@@ -19,13 +19,17 @@
       <img class="h-48 w-full object-cover md:w-48 hover:scale-125 transition duration-500 cursor-pointer object-cover" loading="lazy" src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}" alt="{{ $item.Title | plainify }}">
       {{end}}
     </div>
-    <div class="p-8">
+    <div class="p-6">
       <div class="uppercase tracking-wide text-md text-primary-700 dark:text-primary-200 font-semibold">{{ $item.Title }}</div>
+      <p class="mt-2 line-clamp-3 text-sm">by:
+        {{ range $item.Params.authors }}
+        {{ . }},
+        {{ end }}
+        {{ $item.Params.dateshown }}
+      </p>
+      <hr class="mt-2" />
       <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
         {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
-      </p>
-      <p class="mt-2 text-gray-500 dark:text-gray-400">
-        {{- $item.Date | time.Format (site.Params.locale.date_format | default ":date_long") -}}
       </p>
     </div>
   </div>
