--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -130,7 +130,7 @@
 
       <div class="p-4">
         <div class="mb-6 text-2xl font-bold text-gray-900 dark:text-white">
-          Open Source Projects
+          Subprojects
         </div>
         {{ range $index, $item := $query_repo }}
             <div class="p-4 border top-item bg-black text-white hover:bg-white hover:text-black dark:bg-white dark:text-black dark:hover:bg-black dark:hover:text-white">
