--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -124,13 +124,13 @@
 </div>
 {{ end }}
 
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center" style="padding-bottom: 15rem;">
   <div class="container px-8 mx-auto max-w-screen-xl xl:px-5 py-5 lg:py-8">
     <div class="grid md:grid-cols-2 top-blog-container">
 
       <div class="p-4">
         <div class="mb-6 text-2xl font-bold text-gray-900 dark:text-white">
-          Subprojects
+          SubProjects
         </div>
         {{ range $index, $item := $query_repo }}
             <div class="p-4 border top-item bg-black text-white hover:bg-white hover:text-black dark:bg-white dark:text-black dark:hover:bg-black dark:hover:text-white">
@@ -148,18 +148,27 @@
 
                 <div class="mt-2 jump-btn-group">
                   <!-- get start button -->
-                  <a href="{{ $item.Params.external_link }}" target="_blank" class="jump-button">
+                  {{ with $item.Params.external_link }}
+                  <a href="{{ . }}" target="_blank" class="jump-button">
                     Get start
                   </a>
+                  {{ end }}
+                  
+                  {{ with $item.Params.doc_link }}
                   |
-                  <a href="{{ $item.Params.doc_link }}" target="_blank" class="jump-button">
+                  <a href="{{ . }}" target="_blank" class="jump-button">
                     Read the docs
                   </a>
+                  {{ end }}
                 </div>
 
             </div>
         {{ end }}
       </div>
+
+
+
+      {{ if $block.content.show_blog }}
       <div class="p-4">
         <div class="mb-6 text-2xl font-bold text-gray-900 dark:text-white">
           Recent blogs
@@ -189,51 +198,40 @@
         {{ end }}
 
 
-    {{/* show all the blogs*/}}
-    {{ $show_archive_link := $block.content.archive.enable | default true }}
-    {{ if $show_archive_link | and $archive_page }}
+        {{/* show all the blogs*/}}
+        {{ $show_archive_link := $block.content.archive.enable | default true }}
+        {{ if $show_archive_link | and $archive_page }}
 
-      {{ $archive_link := "" }}
-      {{ if $block.content.archive.link }}
-        {{ $archive_link = $block.content.archive.link | relLangURL }}
-      {{ else }}
-        {{ $archive_link = $archive_page.RelPermalink }}
-      {{ end }}
+          {{ $archive_link := "" }}
+          {{ if $block.content.archive.link }}
+            {{ $archive_link = $block.content.archive.link | relLangURL }}
+          {{ else }}
+            {{ $archive_link = $archive_page.RelPermalink }}
+          {{ end }}
 
-      {{/* Localisation */}}
-      {{ $items_type := $archive_page.Type }}
-      {{ $i18n := "" }}
-      <!-- {{ if eq $items_type "blog" }}
-        {{ $i18n = "more_posts" }}
-      {{ else if eq $items_type "event" }}
-        {{ $i18n = "more_talks" }}
-      {{ else if eq $items_type "publication" }}
-        {{ $i18n = "more_publications" }}
-      {{ else }}
-        {{ $i18n = "more_pages" }}
-      {{ end }} -->
+          {{/* Localisation */}}
+          {{ $items_type := $archive_page.Type }}
+          {{ $i18n := "" }}
+          {{ $i18n = "more_posts" }}
+          {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "See all" }}
 
-      {{ $i18n = "more_posts" }}
-
-
-      {{ $archive_text := $block.content.archive.text | default (i18n $i18n) | default "See all" }}
-
-      <div class="container mx-auto max-w-screen-lg px-8 xl:px-5 pb-5 lg:pb-8">
-        <div class="mt-10 flex justify-center">
-          <a
-            class="relative inline-flex items-center gap-1 rounded-md border border-gray-300 bg-white px-3 py-2 pl-4 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20 dark:border-gray-500 dark:bg-gray-800 dark:text-gray-300"
-            href="{{ $archive_link }}">
-              <span>{{ $archive_text | emojify }}</span>
-            </a>
+          <div class="container mx-auto max-w-screen-lg px-8 xl:px-5 pb-5 lg:pb-8">
+            <div class="mt-10 flex justify-center">
+              <a
+                class="relative inline-flex items-center gap-1 rounded-md border border-gray-300 bg-white px-3 py-2 pl-4 text-sm font-medium text-gray-500 hover:bg-gray-50 focus:z-20 dark:border-gray-500 dark:bg-gray-800 dark:text-gray-300"
+                href="{{ $archive_link }}">
+                  <span>{{ $archive_text | emojify }}</span>
+                </a>
+              </div>
           </div>
+        {{ end }}
       </div>
-
-      </div>
+      {{ end }}
     </div>
   </div>
 </div>
 
-{{ end }}
+
 
 <style>
   .top-blog-container .top-item {
