update mooncake style

--- a/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
+++ b/hugo-blox/blox-tailwind/layouts/partials/blox/top-blog.html
@@ -147,7 +147,7 @@
               <!-- summary -->
               <hr class="mt-2" />
                 <p class="mt-2 line-clamp-5 text-sm">
-                  Mooncake, delicious mooncake made with <a href="https://www.moonshot.cn/" style="color: gray;"><img src="{{ $image_moon.Permalink }}" alt="icon" style="height: 17px; vertical-align: middle; display: inline-block;"> Moonshot AI</a> ! 
+                  Mooncake, delicious mooncake made with <a href="https://www.moonshot.cn/" style=" text-decoration: underline;"><img src="{{ $image_moon.Permalink }}" alt="icon" style="height: 17px; vertical-align: baseline; display: inline-block;"> Moonshot AI</a> ! 
                 </p>
                 <p class="mt-2 line-clamp-5 text-sm">
                   A KVCache-centric disaggregated architecture for LLM serving.
